# lua-cpp

./: .gitignore  CMakeLists.txt  CPP_LUA.cpp  CPP_LUA.sln  CPP_LUA.vcxproj  CPP_LUA.vcxproj.filters  README.md  cppCallLuaFunction.lua  cppCallLuaTable.lua  cppCallLuaVar.lua  lua2cpp.lua  main.lua  table.lua  test.lua
lua501/: CMakeLists.txt
lua501-clib/: CMakeLists.txt  dbg.c  dbg.h
src/: case.h  main.cpp
src/profiler/: Profier.cpp  Profiler.h  data.cpp  data.h
src/scripts/: func.lua  loadCLib.lua  lua2cpp_table.lua  luaCoroutine.lua  main.lua  test-encode.lua  test-function.lua  test.lua
